--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-simplexml": "*",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "simplepie/simplepie": "^1.8",
+        "spatie/laravel-data": "^4.15",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
