--- a/composer.json
+++ b/composer.json
@@ -14,19 +14,23 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "peckphp/peck": "^0.1.3",
         "simplepie/simplepie": "^1.8",
         "spatie/laravel-data": "^4.15",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "pestphp/pest-plugin-type-coverage": "^3.5",
+        "rector/rector": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -64,6 +68,13 @@
             "npm run build:ssr",
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"php artisan inertia:start-ssr\" --names=server,queue,logs,ssr"
+        ],
+        "test": [
+            "herd coverage ./vendor/bin/pest --parallel --coverage --type-coverage --arch",
+            "./vendor/bin/pint",
+            "./vendor/bin/peck",
+            "./vendor/bin/phpstan analyse",
+            "./vendor/bin/rector"
         ]
     },
     "extra": {
