--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.9",
+        "shadcn-vue": "^2.1.0",
         "typescript-eslint": "^8.23.0",
         "vue-tsc": "^2.2.4"
     },
@@ -35,6 +36,7 @@
         "lucide": "^0.468.0",
         "lucide-vue-next": "^0.468.0",
         "radix-vue": "^1.9.11",
+        "reka-ui": "^2.2.0",
         "tailwind-merge": "^2.5.5",
         "tailwindcss": "^3.4.1",
         "tailwindcss-animate": "^1.0.7",
